SchemeParser.py
# Generated from Scheme.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SchemeParser ( Parser ):

    grammarFileName = "Scheme.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'#t'", "'#f'", "'if'", 
                     "'cond'", "'let'", "'read'", "'display'", "'write'", 
                     "'newline'", "'car'", "'cdr'", "'cons'", "'null?'", 
                     "'else'", "'define'", "'+'", "'-'", "'*'", "'/'", "'mod'", 
                     "'^'", "'<>'", "'<='", "'>='", "'<'", "'>'", "'='", 
                     "'and'", "'or'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SUM", "SUB", "PROD", "DIV", 
                      "MOD", "EXP", "NOTEQ", "LESSEQ", "GREATEREQ", "LESS", 
                      "GREATER", "EQ", "AND", "OR", "NOT", "LIST", "EMPTY_LIST", 
                      "STRING", "ID", "NUM", "COMMENT", "WS" ]

    RULE_root = 0
    RULE_expr = 1
    RULE_letBinding = 2
    RULE_condClause = 3
    RULE_declaration = 4
    RULE_block = 5
    RULE_stmt = 6

    ruleNames =  [ "root", "expr", "letBinding", "condClause", "declaration", 
                   "block", "stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    SUM=18
    SUB=19
    PROD=20
    DIV=21
    MOD=22
    EXP=23
    NOTEQ=24
    LESSEQ=25
    GREATEREQ=26
    LESS=27
    GREATER=28
    EQ=29
    AND=30
    OR=31
    NOT=32
    LIST=33
    EMPTY_LIST=34
    STRING=35
    ID=36
    NUM=37
    COMMENT=38
    WS=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SchemeParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(SchemeParser.DeclarationContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)


        def getRuleIndex(self):
            return SchemeParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = SchemeParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 14
                    self.declaration() 
                self.state = 19
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 266287972378) != 0):
                self.state = 20
                self.expr()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(SchemeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SchemeParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class GroupExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SchemeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroupExpr" ):
                listener.enterGroupExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroupExpr" ):
                listener.exitGroupExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroupExpr" ):
                return visitor.visitGroupExpr(self)
            else:
                return visitor.visitChildren(self)


    class NullExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SchemeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullExpr" ):
                listener.enterNullExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullExpr" ):
                listener.exitNullExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullExpr" ):
                return visitor.visitNullExpr(self)
            else:
                return visitor.visitChildren(self)


    class TrueExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrueExpr" ):
                listener.enterTrueExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrueExpr" ):
                listener.exitTrueExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrueExpr" ):
                return visitor.visitTrueExpr(self)
            else:
                return visitor.visitChildren(self)


    class ListLiteralExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LIST(self):
            return self.getToken(SchemeParser.LIST, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListLiteralExpr" ):
                listener.enterListLiteralExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListLiteralExpr" ):
                listener.exitListLiteralExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListLiteralExpr" ):
                return visitor.visitListLiteralExpr(self)
            else:
                return visitor.visitChildren(self)


    class NumberExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUM(self):
            return self.getToken(SchemeParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumberExpr" ):
                return visitor.visitNumberExpr(self)
            else:
                return visitor.visitChildren(self)


    class LogicalExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def AND(self):
            return self.getToken(SchemeParser.AND, 0)
        def OR(self):
            return self.getToken(SchemeParser.OR, 0)
        def NOT(self):
            return self.getToken(SchemeParser.NOT, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalExpr" ):
                listener.enterLogicalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalExpr" ):
                listener.exitLogicalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicalExpr" ):
                return visitor.visitLogicalExpr(self)
            else:
                return visitor.visitChildren(self)


    class CondExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def condClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.CondClauseContext)
            else:
                return self.getTypedRuleContext(SchemeParser.CondClauseContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondExpr" ):
                listener.enterCondExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondExpr" ):
                listener.exitCondExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondExpr" ):
                return visitor.visitCondExpr(self)
            else:
                return visitor.visitChildren(self)


    class ReadExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadExpr" ):
                listener.enterReadExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadExpr" ):
                listener.exitReadExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadExpr" ):
                return visitor.visitReadExpr(self)
            else:
                return visitor.visitChildren(self)


    class NewlineExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewlineExpr" ):
                listener.enterNewlineExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewlineExpr" ):
                listener.exitNewlineExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewlineExpr" ):
                return visitor.visitNewlineExpr(self)
            else:
                return visitor.visitChildren(self)


    class ComparisonExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)

        def LESS(self):
            return self.getToken(SchemeParser.LESS, 0)
        def LESSEQ(self):
            return self.getToken(SchemeParser.LESSEQ, 0)
        def GREATER(self):
            return self.getToken(SchemeParser.GREATER, 0)
        def GREATEREQ(self):
            return self.getToken(SchemeParser.GREATEREQ, 0)
        def EQ(self):
            return self.getToken(SchemeParser.EQ, 0)
        def NOTEQ(self):
            return self.getToken(SchemeParser.NOTEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparisonExpr" ):
                listener.enterComparisonExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparisonExpr" ):
                listener.exitComparisonExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparisonExpr" ):
                return visitor.visitComparisonExpr(self)
            else:
                return visitor.visitChildren(self)


    class EmptyListExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EMPTY_LIST(self):
            return self.getToken(SchemeParser.EMPTY_LIST, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmptyListExpr" ):
                listener.enterEmptyListExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmptyListExpr" ):
                listener.exitEmptyListExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyListExpr" ):
                return visitor.visitEmptyListExpr(self)
            else:
                return visitor.visitChildren(self)


    class LetExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def letBinding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.LetBindingContext)
            else:
                return self.getTypedRuleContext(SchemeParser.LetBindingContext,i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetExpr" ):
                listener.enterLetExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetExpr" ):
                listener.exitLetExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetExpr" ):
                return visitor.visitLetExpr(self)
            else:
                return visitor.visitChildren(self)


    class StringExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(SchemeParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringExpr" ):
                listener.enterStringExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringExpr" ):
                listener.exitStringExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringExpr" ):
                return visitor.visitStringExpr(self)
            else:
                return visitor.visitChildren(self)


    class VariableExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SchemeParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableExpr" ):
                listener.enterVariableExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableExpr" ):
                listener.exitVariableExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableExpr" ):
                return visitor.visitVariableExpr(self)
            else:
                return visitor.visitChildren(self)


    class WriteExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SchemeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteExpr" ):
                listener.enterWriteExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteExpr" ):
                listener.exitWriteExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteExpr" ):
                return visitor.visitWriteExpr(self)
            else:
                return visitor.visitChildren(self)


    class CdrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SchemeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCdrExpr" ):
                listener.enterCdrExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCdrExpr" ):
                listener.exitCdrExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCdrExpr" ):
                return visitor.visitCdrExpr(self)
            else:
                return visitor.visitChildren(self)


    class ConsExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsExpr" ):
                listener.enterConsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsExpr" ):
                listener.exitConsExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConsExpr" ):
                return visitor.visitConsExpr(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SchemeParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCallExpr" ):
                listener.enterFunctionCallExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCallExpr" ):
                listener.exitFunctionCallExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCallExpr" ):
                return visitor.visitFunctionCallExpr(self)
            else:
                return visitor.visitChildren(self)


    class IfExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfExpr" ):
                listener.enterIfExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfExpr" ):
                listener.exitIfExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpr" ):
                return visitor.visitIfExpr(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SchemeParser.ExprContext)
            else:
                return self.getTypedRuleContext(SchemeParser.ExprContext,i)

        def SUM(self):
            return self.getToken(SchemeParser.SUM, 0)
        def SUB(self):
            return self.getToken(SchemeParser.SUB, 0)
        def PROD(self):
            return self.getToken(SchemeParser.PROD, 0)
        def DIV(self):
            return self.getToken(SchemeParser.DIV, 0)
        def MOD(self):
            return self.getToken(SchemeParser.MOD, 0)
        def EXP(self):
            return self.getToken(SchemeParser.EXP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticExpr" ):
                listener.enterArithmeticExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticExpr" ):
                listener.exitArithmeticExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticExpr" ):
                return visitor.visitArithmeticExpr(self)
            else:
                return visitor.visitChildren(self)


    class FalseExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalseExpr" ):
                listener.enterFalseExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalseExpr" ):
                listener.exitFalseExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalseExpr" ):
                return visitor.visitFalseExpr(self)
            else:
                return visitor.visitChildren(self)


    class DisplayExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SchemeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDisplayExpr" ):
                listener.enterDisplayExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDisplayExpr" ):
                listener.exitDisplayExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisplayExpr" ):
                return visitor.visitDisplayExpr(self)
            else:
                return visitor.visitChildren(self)


    class CarExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SchemeParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SchemeParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCarExpr" ):
                listener.enterCarExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCarExpr" ):
                listener.exitCarExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCarExpr" ):
                return visitor.visitCarExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = SchemeParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = SchemeParser.GroupExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.match(SchemeParser.T__0)
                self.state = 29
                self.expr()
                self.state = 30
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 2:
                localctx = SchemeParser.VariableExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 32
                self.match(SchemeParser.ID)
                pass

            elif la_ == 3:
                localctx = SchemeParser.NumberExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.match(SchemeParser.NUM)
                pass

            elif la_ == 4:
                localctx = SchemeParser.StringExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 34
                self.match(SchemeParser.STRING)
                pass

            elif la_ == 5:
                localctx = SchemeParser.TrueExprContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 35
                self.match(SchemeParser.T__2)
                pass

            elif la_ == 6:
                localctx = SchemeParser.FalseExprContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 36
                self.match(SchemeParser.T__3)
                pass

            elif la_ == 7:
                localctx = SchemeParser.ArithmeticExprContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 37
                self.match(SchemeParser.T__0)
                self.state = 38
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 16515072) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 39
                self.expr()
                self.state = 40
                self.expr()
                self.state = 41
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 8:
                localctx = SchemeParser.IfExprContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 43
                self.match(SchemeParser.T__0)
                self.state = 44
                self.match(SchemeParser.T__4)
                self.state = 45
                self.expr()
                self.state = 46
                self.expr()
                self.state = 47
                self.expr()
                self.state = 48
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 9:
                localctx = SchemeParser.CondExprContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 50
                self.match(SchemeParser.T__0)
                self.state = 51
                self.match(SchemeParser.T__5)
                self.state = 53 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 52
                    self.condClause()
                    self.state = 55 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==1):
                        break

                self.state = 57
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 10:
                localctx = SchemeParser.LetExprContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 59
                self.match(SchemeParser.T__0)
                self.state = 60
                self.match(SchemeParser.T__6)
                self.state = 61
                self.match(SchemeParser.T__0)
                self.state = 62
                self.letBinding()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 63
                    self.letBinding()
                    self.state = 68
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 69
                self.match(SchemeParser.T__1)
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 70
                    self.expr()
                    self.state = 73 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 266287972378) != 0)):
                        break

                self.state = 75
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 11:
                localctx = SchemeParser.ReadExprContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 77
                self.match(SchemeParser.T__0)
                self.state = 78
                self.match(SchemeParser.T__7)
                self.state = 79
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 12:
                localctx = SchemeParser.DisplayExprContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 80
                self.match(SchemeParser.T__0)
                self.state = 81
                self.match(SchemeParser.T__8)
                self.state = 82
                self.expr()
                self.state = 83
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 13:
                localctx = SchemeParser.WriteExprContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 85
                self.match(SchemeParser.T__0)
                self.state = 86
                self.match(SchemeParser.T__9)
                self.state = 87
                self.expr()
                self.state = 88
                self.match(SchemeParser.T__1)
                pass

            elif la_ == 14:
                localctx = SchemeParser.NewlineExprContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 90
                self.match(SchemeParser.T__0)
                self.state = 91
                self.match(SchemeParser.T__10)
                self.state = 92
                self.match(SchemeParser.T__1)
                pass
